--- a/department-service.properties
+++ b/department-service.properties
@@ -1,1 +1,1 @@
-app.service-name = Department Service - This is a Config server demo
+app.service-name = Department Service - Happy Graduation Dinner
